--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Your Name / Site Title"
+title                    : "Zanfeng Fang / Site Title"
 title_separator          : "-"
 name                     : &name "Zanfeng Fang"
 description              : &description "Zanfeng Fang's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
