--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "baymax-fred/fredfangzf.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "images/profile.png"
   name             : "Zanfeng Fang"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate"
