--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Zanfeng Fang (Fred Fang, 方赞峰)"
 title_separator          : "-"
 name                     : &name "Zanfeng Fang"
 description              : &description "Zanfeng Fang's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://fredfangzf.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://baymax-fred.github.io/fredfangzf # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
